--- a/lib/testapp_web/templates/layout/jobs.html.eex
+++ b/lib/testapp_web/templates/layout/jobs.html.eex
@@ -6,16 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Medeed - Jobs</title>
+    <%= csrf_meta_tag() %>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
-  <body class="bg-gray-900selection-teal-200">
-    <section class="relative bg-gray-900 min-h-screen text-gray-500 leading-relaxed max-w-3xl p-12 block">
-      <main role="main">
-        <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-        <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-        <%= @inner_content %>
-      </main>
-    </section>
+  <body>
+    <main role="main">
+      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+      <%= @inner_content %>
+    </main>
   </body>
 </html>
